# synths-on-near

./: .gitignore  README.md  package-lock.json
contract/: Cargo.toml  interact-with-redstone-payload.sh
contract/src/: lib.rs  redstone.rs
frontend/: index.html  index.js  package-lock.json  package.json
frontend/assets/: global.css
integration-tests/: package-lock.json
integration-tests/src/: main.ava.ts
